Fiddle with CSS and links to fix and make readable.

--- a/web/pages/style.css
+++ b/web/pages/style.css
@@ -21,9 +21,9 @@ h1, h2, h3 {
 	color: #649632;
 }
 
-h1 { font-size: 44px; }
+h1 { font-size: 28px; }
 
-h2 { font-size: 20px; padding: 25px 0px; }
+h2 { font-size: 15px; padding: 20px 0px; }
 
 h3 { }
 
